--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "restricted-site-proxy",
-  "version": "0.2.0",
+  "version": "0.0.0",
   "description": "Small proxy app with express sessions. Usefull for proxying a site where you cannot use Basic-Auth or Digest-Auth because you have other mechanisms in place.",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node ."
   },
   "author": "Christoph Bühler <christoph@smartive.ch>",
   "license": "MIT",
